--- a/.harness/pipelines/Deploy_Nginx.yaml
+++ b/.harness/pipelines/Deploy_Nginx.yaml
@@ -1,10 +1,10 @@
 pipeline:
     name: Deploy Nginx
-    identier: Deploy_Nginx
+    identifier: Deploy_Nginx
     projectIdentifier: onboardingengineertechtest
     orgIdentifier: default
     description: Pipeline to deploy Nginx into local Rancher Desktop kubernetes cluster
-    tags:
+        tags:
         kubernetes: ""
         rancher desktop: ""
         nginx: ""
