Update connector nginx-deployment

--- a/.harness/connectors/nginxdeployment.yaml
+++ b/.harness/connectors/nginxdeployment.yaml
@@ -16,5 +16,6 @@ connector:
           tokenRef: githubpat
     delegateSelectors:
     - rancher-local-desktop
+    - demo
     executeOnDelegate: true
     type: Repo
